--- a/src/index.html
+++ b/src/index.html
@@ -5,28 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
-    <title>AETHERIA PDF | The Zenith of Document Intelligence</title>
-    <meta name="title" content="AETHERIA PDF | The Zenith of Document Intelligence" />
+    <title>v0pdftools | The Zenith of Document Intelligence</title>
+    <meta name="title" content="v0pdftools | The Zenith of Document Intelligence" />
     <meta name="description" content="100% Private, Browser-Based PDF Suite. Experience ethereal performance with an iridescent glassmorphic interface. No uploads, just pure client-side intelligence." />
-    <meta name="keywords" content="PDF Merge, PDF Split, Private PDF Tools, Client-side PDF, Cyber-luxe PDF, Aetheria PDF" />
-    <meta name="author" content="Aetheria Labs" />
+    <meta name="keywords" content="PDF Merge, PDF Split, Private PDF Tools, Client-side PDF, v0pdftools" />
+    <meta name="author" content="v0pdftools" />
 
-    <!-- Open Graph / Facebook -->
+    <!-- Open Graph / WhatsApp -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://aetheria-pdf.vercel.app/" />
-    <meta property="og:title" content="AETHERIA PDF | The Zenith of Document Intelligence" />
-    <meta property="og:description" content="100% Private, Browser-Based PDF Suite. Iridescent glassmorphic interface with pure client-side intelligence." />
-    <meta property="og:image" content="./logo.svg" />
+    <meta property="og:url" content="https://v0pdftools.vercel.app/" />
+    <meta property="og:title" content="v0pdftools | The Zenith of Document Intelligence" />
+    <meta property="og:description" content="100% Private, browser-based PDF suite with iridescent glassmorphism and client-side intelligence." />
+    <meta property="og:image" content="https://v0pdftools.vercel.app/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:type" content="image/png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://aetheria-pdf.vercel.app/" />
-    <meta property="twitter:title" content="AETHERIA PDF | The Zenith of Document Intelligence" />
-    <meta property="twitter:description" content="100% Private, Browser-Based PDF Suite. Iridescent glassmorphic interface with pure client-side intelligence." />
-    <meta property="twitter:image" content="./logo.svg" />
+    <meta property="twitter:url" content="https://v0pdftools.vercel.app/" />
+    <meta property="twitter:title" content="v0pdftools | The Zenith of Document Intelligence" />
+    <meta property="twitter:description" content="100% Private, browser-based PDF suite with iridescent glassmorphism and client-side intelligence." />
+    <meta property="twitter:image" content="https://v0pdftools.vercel.app/og-image.png" />
 
-    <!-- Favicon -->
+    <!-- Favicon / App Icons -->
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="apple-touch-icon" href="./favicon.svg" />
     
     <script type="module" src="./frontend.tsx" async></script>
   </head>
